--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express-session": "^1.18.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.3",
+    "nodemailer": "^6.9.10",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "serve-favicon": "^2.5.0"
